:bug: meme and nyan cat overlap

--- a/css/nyancat.css
+++ b/css/nyancat.css
@@ -29,24 +29,24 @@ audio {
   image-rendering: pixelated;
 }
 
-#meme{
-  margin-left: 50px;
+#meme {
+  margin-left: calc(34px * var(--nyan-scale) + 20px);
   width: 350px;
   height: auto;
 }
 
-#gif{
+#gif {
   position: absolute;
   margin-top: 30px;
   margin-left: 30px;
   z-index: 999;
 }
 
-#text{
+#text {
   position: absolute;
   z-index: 998;
   left: 30px;
-  top:170px;
+  top: 170px;
   font-family: "Orbitron", Comic Sans MS, sans-serif;
   font-weight: bold;
   font-size: 16pt;
